<resources>
    <string name="text_search">Search</string>
    <string name="text_something_wrong">Oops! Something went wrong</string>
    <string name="text_enter_character_name_above">Enter character name above</string>
    <string name="text_no_character_listed">No character listed</string>
    <string name="content_desc_character_image">character image</string>
    <string name="text_set_name">Set Name</string>
    <string name="sample_text_value">Value</string>
    <string name="text_rarity">Rarity</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_mana_cost">Mana Cost</string>
    <string name="text_cmc">CMC</string>
    <string name="text_oracle_text">Oracle Text</string>
    <string name="text_type">Type</string>
    <string name="select_character_from_the_left_pane">Select from the left pane</string>
    <string name="sample_character_name">Character Name</string>
    <string name="sample_character_gender">Character Gender</string>
    <string name="text_name">Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_birth_year">Birth Year</string>
    <string name="text_height">Height</string>
    <string name="text_see_more">See more about %s:</string>
    <string name="text_species">Species</string>
    <string name="text_films">Films</string>
    <string name="text_character_detail">Character Detail</string>
    <string name="text_label">Label</string>
    <string name="text_film">Films</string>
    <string name="text_film_detail">Film Detail</string>
    <string name="text_title">Title</string>
    <string name="text_value">Value</string>
    <string name="text_opening_crawl">Opening Crawl</string>
    <string name="text_specie_detail">Specie Detail</string>
    <string name="text_language">Language</string>
    <string name="text_homeworld_population">Home World Population</string>
    <string name="text_films_participated_in">Film(s) participated in</string>
    <string name="text_specie_s_belonged_to">Specie(s) belonged to</string>
</resources>
